[gd_scene load_steps=24 format=3 uid="uid://lq8g6vl0upn0"]

[ext_resource type="Script" path="res://scenes/show/dicebattle/dicebattle.gd" id="1_wkn4p"]
[ext_resource type="FontFile" uid="uid://traj52d5abna" path="res://asset/font/joystix monospace.otf" id="2_cy624"]
[ext_resource type="Texture2D" uid="uid://dbjo3c2xurnxo" path="res://scenes/show/dicebattle/dice.png" id="2_g6gic"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lub65"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.211765, 0.211765, 0.211765, 0.760784)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yiv1a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlul"]
atlas = ExtResource("2_g6gic")
region = Rect2(32, 16, 16, 16)
filter_clip = true

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_j11d7"]
load_path = "res://.godot/imported/dice.png-9c61ce96822e29bb24b753f44196384a.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_rocjb"]
atlas = SubResource("CompressedTexture2D_j11d7")
region = Rect2(0, 16, 16, 16)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_ajo51"]
atlas = ExtResource("2_g6gic")
region = Rect2(0, 0, 16, 16)
filter_clip = true

[sub_resource type="Animation" id="Animation_ok1dw"]
resource_name = "1"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_rocjb")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_ajo51")]
}

[sub_resource type="AtlasTexture" id="AtlasTexture_gvwl7"]
atlas = ExtResource("2_g6gic")
region = Rect2(16, 0, 16, 16)
filter_clip = true

[sub_resource type="Animation" id="Animation_wjuoa"]
resource_name = "2"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_rocjb")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_gvwl7")]
}

[sub_resource type="AtlasTexture" id="AtlasTexture_6wy1b"]
atlas = ExtResource("2_g6gic")
region = Rect2(32, 0, 16, 16)
filter_clip = true

[sub_resource type="Animation" id="Animation_wqv48"]
resource_name = "3"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_rocjb")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_6wy1b")]
}

[sub_resource type="AtlasTexture" id="AtlasTexture_xl27q"]
atlas = ExtResource("2_g6gic")
region = Rect2(0, 16, 16, 16)
filter_clip = true

[sub_resource type="Animation" id="Animation_uwptv"]
resource_name = "4"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_rocjb")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_xl27q")]
}

[sub_resource type="AtlasTexture" id="AtlasTexture_wiv0y"]
atlas = ExtResource("2_g6gic")
region = Rect2(16, 16, 16, 16)
filter_clip = true

[sub_resource type="Animation" id="Animation_1qiui"]
resource_name = "5"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_rocjb")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_wiv0y")]
}

[sub_resource type="Animation" id="Animation_csp6j"]
resource_name = "6"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_rocjb")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_kvlul")]
}

[sub_resource type="Animation" id="Animation_ar2uh"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AtlasTexture_rocjb")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [SubResource("AtlasTexture_ajo51"), SubResource("AtlasTexture_gvwl7"), SubResource("AtlasTexture_6wy1b"), SubResource("AtlasTexture_xl27q"), SubResource("AtlasTexture_wiv0y"), SubResource("AtlasTexture_kvlul")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_akdhp"]
_data = {
"1": SubResource("Animation_ok1dw"),
"2": SubResource("Animation_wjuoa"),
"3": SubResource("Animation_wqv48"),
"4": SubResource("Animation_uwptv"),
"5": SubResource("Animation_1qiui"),
"6": SubResource("Animation_csp6j"),
"default": SubResource("Animation_ar2uh")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s76tn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7t4n8"]

[node name="dicebattle" type="Node2D"]
script = ExtResource("1_wkn4p")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_lub65")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Attacker" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_yiv1a")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/Attacker"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AttackerName" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Attacker/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cy624")
theme_override_font_sizes/font_size = 24
text = "basitgaming"
autowrap_mode = 3

[node name="AttackerDice" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/Attacker/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 8
texture = SubResource("AtlasTexture_kvlul")
expand_mode = 4
metadata/_aseprite_wizard_config_ = {
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/Dice/AnimationPlayer",
"source": "C:/Users/Alp/Desktop/dice.ase"
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PanelContainer/VBoxContainer/HBoxContainer/Attacker/VBoxContainer/AttackerDice"]
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_akdhp")
}

[node name="Spacer" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 350)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_s76tn")

[node name="Defender" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_7t4n8")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/Defender"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DefenderName" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/Defender/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cy624")
theme_override_font_sizes/font_size = 24
text = "test"
autowrap_mode = 3

[node name="DefenderDice" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer/Defender/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 8
texture = SubResource("AtlasTexture_6wy1b")
expand_mode = 4
metadata/_aseprite_wizard_config_ = {
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/Dice/AnimationPlayer",
"source": "C:/Users/Alp/Desktop/dice.ase"
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PanelContainer/VBoxContainer/HBoxContainer/Defender/VBoxContainer/DefenderDice"]
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_akdhp")
}

[node name="diceTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="destroyTimer" type="Timer" parent="."]
wait_time = 1.453

[connection signal="timeout" from="diceTimer" to="." method="_on_dice_timer_timeout"]
[connection signal="timeout" from="destroyTimer" to="." method="_on_destroy_timer_timeout"]
